Create user login

--- a/WebUsuario/login.html
+++ b/WebUsuario/login.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Index</title>
+	<title>Login</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/index.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-	
-	<header>
+
+    <header>
 		
 		<span>
 			<i class="fas fa-cannabis"></i>
@@ -43,7 +43,7 @@
 		</div>
 
 	</header>
-
+	
 	<div class="search">
 		<i class="fas fa-search"></i>
 
@@ -51,8 +51,6 @@
 			<input name="buscar" id="buscar" type="text" placeholder="Buscar..." autofocus="" onfocusout="cerrarBuscar()" oninput="buscarNombre()">
 		</form>
 	</div>
-
-	<section class="busquedas"></section>
 	
 	<section class="login">
 	
@@ -85,41 +83,11 @@
 	</section>
 
 </body>
-	
+
 </html>
 
 
-<!--
-		<article>
-			<figure>
-				<img src="img/margarita.jpg" alt="">
-			</figure>
 
-			<ul>
-				<li>Margarita</li>
-				<li>Bellis perennis</li>
-				<li>
-					<i class="fas fa-history"></i>
-					Hace 3 horas
-				</li>
-			</ul>
-		</article>
-
-		<article>
-			<figure>
-				<img src="img/arbol.jpg" alt="">
-			</figure>
-
-			<ul>
-				<li>Abedul</li>
-				<li>Betula</li>
-				<li>
-					<i class="fas fa-history"></i>
-					Hace 3 horas
-				</li>
-			</ul>
-		</article>
-		-->
 
 
 
