--- a/WebUsuario/index.html
+++ b/WebUsuario/index.html
@@ -9,7 +9,9 @@
 	<link rel="stylesheet" href="css/index.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/0070d8a8c5.js" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/index.js"></script>
+	<script src="js/jquery.js"></script>
 </head>
 
 <body>
@@ -17,12 +19,12 @@
 	<header>
 		
 		<span>
-			<i class="fas fa-cannabis"></i>
+			<i id="atras" class="fas fa-cannabis"></i>
 		</span>
 
 		<i class="fas fa-fan"></i>
 
-		<span>
+		<span id="menuUser">
 			<i class="fas fa-search" onclick="buscar()"></i>
 			<i onclick="abrirMenu()" class="fas fa-ellipsis-v"></i>
 		</span>
