Create class favorito

--- a/WebUsuario/index.html
+++ b/WebUsuario/index.html
@@ -20,6 +20,7 @@
 		
 		<span>
 			<i id="atras" class="fas fa-cannabis"></i>
+			<i id="like" class="far fa-star" onclick="checkLike()"></i>
 		</span>
 
 		<i class="fas fa-fan"></i>
@@ -160,6 +161,8 @@
             <input type="button" value="Enviar" onclick="enviarQueja()">
         
         </form>
+        
+        <p id="quejaExito">Su mensaje ha sido enviado con éxito</p>
 	
 	</section>
 
