Finish verifying email

--- a/WebUsuario/index.html
+++ b/WebUsuario/index.html
@@ -84,6 +84,10 @@
         <span id="errorLogin">
             <p>Invalid credentials</p>
         </span>
+        
+        <span id="verificado">
+            <p>Verificado con éxito</p>
+        </span>
 	
 	</section>
 	
