Create error page

--- a/WebUsuario/index.html
+++ b/WebUsuario/index.html
@@ -197,6 +197,16 @@
 	
 	</section>
 
+	<section class="error">
+	
+        <ul>
+            <li>Oops!</li>
+            <li>Parece que ha habido un error<li>
+            <li>Pongase en contacto con el webmaster</li>
+        </ul>
+	
+	</section>
+	
 </body>
 	
 </html>
