--- a/WebUsuario/index.html
+++ b/WebUsuario/index.html
@@ -53,11 +53,11 @@
 	</header>
 
 	<div class="search">
+	
 		<i class="fas fa-search"></i>
 
-		<form name="busqueda" action="">
-			<input name="buscar" id="buscar" type="text" placeholder="Buscar..." autofocus="" onfocusout="cerrarBuscar()" oninput="buscarNombre()">
-		</form>
+		<input name="buscar" id="buscar" type="text" placeholder="Buscar..." autofocus="" onfocusout="cerrarBuscar()" oninput="buscarNombre()">
+		
 	</div>
 
 	<section class="busquedas"></section>
@@ -127,6 +127,10 @@
         
         <span id="errorSignIn">
             <p>El usuario ya existe</p>
+        </span>
+        
+        <span id="registerEmail">
+            <p>Se ha enviado un email para verificarlo</p>
         </span>
 	
 	</section>
