Create planta img

--- a/WebUsuario/index.html
+++ b/WebUsuario/index.html
@@ -142,7 +142,7 @@
         
             <li>
                 <figure>
-                    <img src="img/margarita.jpg" width="100%" height="100%">
+                    <img id="plantaImg" src="img/margarita.jpg" width="100%" height="100%">
                 </figure>
             </li>
             
