--- a/WebUsuario/index.html
+++ b/WebUsuario/index.html
@@ -46,6 +46,8 @@
 				<li><a id="perfil" onclick="perfil(); cerrarMenu();">Perfil</a></li>
 				<li><a>Ayuda</a></li>
 				<li><a id="quejas" onclick="cerrarMenu()">Algún problema?</a></li>
+				<li><a id="listaUsuarios" onclick="cerrarMenu()">Lista usuarios</a></li>
+				<li><a id="listaQuejas" onclick="cerrarMenu()">Lista quejas</a></li>
 				<li><a id="logOut" onclick="salir();cerrarMenu()">Salir</a></li>
 			</ul>
 
